# raindrops

./: .codecov.yml  .gitignore  .imp_info.py  CMakeLists.txt  README.md  dependencies.py
.github/workflows/: build.yml
pyext/src/: __init__.py  analysis.py  graphics.py  io_tools.py  mcmc.py  protein_graph.py  restraints.py
test/: test.py
test/input/: topology_3.txt  xl.csv
tools/: setup_ci.sh
